--- a/assets/css/devstyle.css
+++ b/assets/css/devstyle.css
@@ -1,443 +1,490 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     text-decoration: none;
-}
-
-
-.grid {
+  }
+  
+  .grid {
     display: grid;
     height: auto;
     grid-template: auto/auto;
-    
-
+  
     grid-template-areas:
-    "Home"
-    "navigation-bar"
-    "About"
-    "Projects"
-    "Contact"
-    ;
-
-    font-family: 'Courier New', Courier, monospace;
+      "Home"
+      "navigation-bar"
+      "About"
+      "Projects"
+      "Contact";
+  
+    font-family: "Courier New", Courier, monospace;
     font-size: 2rem;
-}
-
-
-
-.Home {
+  }
+  
+  .Home {
     grid-area: Home;
-    
+  
     height: 100vh;
-    width: 100vw;
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url('../images/bg.jpg');
-
+  
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+      url("../images/bg.jpg");
+  
     background-size: 100vw 100vh;
-   
-}
-
-.home-text {
+  }
+  
+  .home-text {
     animation-name: home-text;
     animation-duration: 1.4s;
     animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
     animation-delay: 0.5s;
-}
-
-button {
-    background-color: #B1B1B1; 
-    color: #0A0708; 
+  }
+  
+  
+    
+  
+  
+  button {
+    background-color: #b1b1b1;
+    color: #0a0708;
     border: 2px solid #747474;
-    transition-duration: 2s;
+    /* transition-duration: 2s; */
     border-radius: 3px;
     padding: 0.5em;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     margin-top: 0.5em;
     font-size: 0.8em;
     margin-bottom: 1em;
- 
-}
-
-.home-button {  
+  }
+  
+  .home-button {
     animation-name: home-button;
-    animation-duration: 1.4s;
-    animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
-    animation-delay: 0.5s;
+    animation-duration: 3s;
+    animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99); 
    
-}
-
-@keyframes home-text {
-    0% {
-        opacity: 0;
-        transform: translateY(-10rem);
-    }
-    
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes home-button {
-    0% {
-        opacity: 0;
-        transform: translateY(10rem);
-    }
-    
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-
-    }
-}
-
-
-.card {
-   
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  /* 
+  @keyframes home-text {
+      0% {
+          opacity: 0;
+          transform: translateY(-10rem);
+      }
+      
+      100% {
+          opacity: 1;
+          transform: translateY(0);
+      }
+  } */
+  
+  @keyframes home-button {
+      0% {
+          opacity: 0;
+          transform: translateY(1rem);
+          animation-duration: 3s;
+      }
+      
+      100% {
+          opacity: 1;
+          transform: translateY(0);
+      }
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 70vw;
+    width: 30vw;
     height: 10em;
     border-radius: 5px;
     flex-direction: column;
-    background-color: #0A0708;
-    color: #B1B1B1;
+    background-color: #0a0708;
+    color: #b1b1b1;
     margin: auto;
     background: rgba(0, 0, 0, 0.9);
     border-radius: 25px;
-}
-
-.card div {
+  }
+  
+  .card div {
     padding: 0.85em;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
-}
-
-
-
-button:hover {
-    background-color: #B1B1B1;
+  }
+  
+  .card:hover {
+    box-shadow: 0 0 15px 2px #747474;
+  }
+  
+  button:hover {
+    background-color: #b1b1b1;
     color: white;
-}
-
-.navigation-bar {
+  }
+  
+  .navigation-bar {
     grid-area: navigation-bar;
-    background-color: #444444;
+    background-color: #0a0708;
     height: fit-content;
     position: sticky;
     top: 0;
-    color: #B1B1B1;
-    box-shadow: 0px 0px 0px 2px #B1B1B1 inset ;
+    color: #b1b1b1;
+    /* box-shadow: 0px 0px 0px 2px #B1B1B1 inset ; */
     z-index: 1;
-}
-
-
-
-ul {
+  }
+  
+  ul {
     display: flex;
     flex-direction: row;
-    justify-content:flex-end;
+    justify-content: flex-end;
     height: fit-content;
     list-style: none;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 0 10px 1px #747474;
     padding: 20px;
-    
-}
-
-li a {
+  }
+  
+  li a {
     display: flex;
     list-style: none;
-    color: #B1B1B1;
+    color: #b1b1b1;
     justify-content: flex-end;
     padding-left: 20px;
     padding-right: 15px;
-}
-
-.About {
+    border-radius: 10px;
+  }
+  
+  li a:hover {
+    box-shadow: 0 0 2px 2px #747474;
+  }
+  
+  .About {
     grid-area: About;
     background-color: #444444;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     scroll-margin-top: 1.5em;
     font-size: large;
-    
-}
-
-.About div {
-    width: 30%;
-    height: 70%;
-    color: #B1B1B1;
-    background-color: #0A0708;
-    border-radius: 10px;
+    padding: 3em;
+  }
+  
+  .Abouth2 {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    box-shadow: 0 8px 16px 0 rgba(177,177,177,0.2);
-    justify-content: center;
+    background-color: #0a0708;
+    border-radius: 8px;
+    padding: 0.5em;
+    color: #747474;
+    box-shadow: 0 0 10px 1px #b1b1b1;
+    font-size: 2.8em;
+    text-align: center;
+  }
+  
+  .deetsskills {
+    width: 100%;
+    height: 70%;
+    color: #b1b1b1;
+    background-color: #444444;
+    border-radius: 10px;
+    display: flex;
+  
+    align-items: center;
+    flex-direction: row;
+  
+    justify-content: space-evenly;
     gap: 5%;
-    
+  
     padding-left: 1%;
     padding-right: 1%;
-}
-
-
-
-
-img {
+  }
+  
+  .card2 {
+    width: 30%;
+    min-height: 90%;
+    display: flex;
+    padding: 2.5em;
+    flex-direction: column;
+    font-size: 1.3em;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #0a0708;
+    border-radius: 20px;
+    box-shadow: 0 0 5px 0.3px #b1b1b1;
+  }
+  
+  img {
     filter: grayscale(100%);
     width: 50%;
     border-radius: 20px;
-}
-
-i {
+  }
+  
+  i {
     font-size: 200%;
     align-items: flex-start;
-}
-
-.Projects {
+  }
+  
+  .Projects {
     grid-area: Projects;
-    background-color: #0A0708;
-    height: 100vh;
-    width: 100vw;
+    background-color: #0a0708;
+    /* height: 100vh; */
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
     scroll-margin-top: 1.5em;
     flex-direction: column;
-}
-
-h2 {
-    color: #B1B1B1;
+    padding: 2em;
+  }
+  
+  /* h2 {
+    color: #b1b1b1;
     justify-content: center;
     height: 1em;
-    font-family: 'Courier New', Courier, monospace;
-    margin-top: 1em;
-}
-
-.Projects h2 {
+    font-family: "Courier New", Courier, monospace;
+  } */
+  
+  .Projects h2 {
     display: flex;
     align-items: center;
     background-color: #747474;
     border-radius: 8px;
     padding: 0.5em;
-    color: #0A0708;
-    margin-left: 2%;
-    width: 6.5em;
+    color: #0a0708;
+    box-shadow: 0 0 10px 1px #b1b1b1;
+  
     text-align: center;
-}
-
-.gallery{
+  }
+  
+  .gallery {
     display: flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-around;
-    height: auto;
     padding: 1em;
-    width: fit-content;
-    height: fit-content;
-
-}
-
-
-
-.gallery-item{
+  
+    width: 100%;
+  }
+  
+  .gallery-item {
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 20%;
+    height: 35%;
+    padding: 1em;
+    margin: 3em;
     background-color: #747474;
     border-radius: 5px;
     align-items: center;
     justify-content: center;
-    margin: 0.5em;
-    font-size: medium;
+    box-shadow: 0 0 5px 2px #b1b1b1;
+    font-size: 0.6em;
     text-align: center;
-    padding: 1%;
-}
-
-.gallery img {
-    width: 90%; 
+  }
+  
+  .gallery-item:hover {
+    box-shadow: 0 0 10px 3px #b1b1b1;
+  }
+  
+  .gallery img {
+    width: 90%;
     padding: 6%;
     transition: 1s;
     border-radius: 30px;
-}
-
-.gallery img:hover {
+  }
+  
+  .gallery img:hover {
     transform: scale(1.1);
-}
-
-
-
-.Contact {
+  }
+  
+  .Contact {
     grid-area: contact;
     background-color: #444444;
-    height: 85vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: space-evenly;
     scroll-margin-top: 3em;
-    color: #B1B1B1;
+    color: #b1b1b1;
     font-size: 0.65em;
-    padding-left: 30%;
-    padding-right: 30%;
+  
+    align-items: center;
+  }
+  
+  .contactcontainer {
+    background-color: #0a0708;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+    scroll-margin-top: 3em;
+    color: #b1b1b1;
+    font-size: 1em;
+    padding: 2em;
+    align-items: center;
+    height: 70%;
+    width: 40%;
+    border-radius: 20px;
+    box-shadow: 0 0 10px 1px #b1b1b1;
+  }
+  
+  .Contacth2 {
+    display: flex;
+    align-items: center;
+    background-color: #0a0708;
+    border-radius: 8px;
+    padding: 0.5em;
+    color: #747474;
+    margin-left: 2%;
+    text-align: center;
+    font-size: 2em;
+    box-shadow: 0 0 10px 1px #b1b1b1;
+  }
+  
+  /* .Contact div{
+      width: 50%;
     
-}
-
-form {
+  } */
+  
+  /* .Contact p{
+      width: 50%;
+  } */
+  
+  form {
     display: flex;
     flex-direction: column;
     align-content: space-between;
-}
-
-.forminputs {
-    margin:2%;
-    
-}
-
-input {
+    font-size: larger;
+  }
+  
+  .forminputs {
+    margin: 2%;
+  }
+  
+  input {
     line-height: 3em;
-}
-
-
-
-header div{
+  }
+  
+  header div {
     display: grid;
     place-content: center;
     text-align: center;
-}
-
-button:hover {
-    transform:scale(1.03) ;
-}
-
-
-
-footer {
-    background-color: #0A0708;
-    color: #B1B1B1;
+  }
+  
+  button:hover {
+    transform: scale(1.03);
+  }
+  
+  footer {
+    background-color: #0a0708;
+    color: #b1b1b1;
     font-size: medium;
     text-align: center;
-}
-
-footer i {
-    color: #B1B1B1;
-}
-
-footer i:hover {
+  }
+  
+  footer i {
+    color: #b1b1b1;
+  }
+  
+  footer i:hover {
     transform: scale(1.1);
-}
-
-
-@media only screen and (min-width: 531px) and (max-width: 768px) {
-    .navigation-bar{
-        justify-content: flex-end;
-        font-size: x-large;
+  }
+  
+  @media only screen and (min-width: 531px) and (max-width: 768px) {
+    .navigation-bar {
+      justify-content: flex-end;
+      font-size: x-large;
     }
-    
-    
-
-    .Projects{
-        font-size: large;
+  
+    .Projects {
+      font-size: large;
     }
-
+  
     .Contact {
-        scroll-margin-top: 1em;
+      scroll-margin-top: 1em;
     }
-}
-
-@media only screen and (min-width:320px) and (max-width:530px) {
+  }
+  
+  @media only screen and (min-width: 320px) and (max-width: 530px) {
     .Home {
-        font-size: medium;
+      font-size: medium;
     }
-
+  
     .card {
-        height: 90vw;
-        width: 90vw;
+      height: 90vw;
+      width: 90vw;
     }
     .card div {
-        padding: 40px;
+      padding: 40px;
     }
-
+  
     .home-button {
-        margin-bottom: 1.5em;
+      margin-bottom: 1.5em;
     }
-
+  
     .navigation-bar {
-        font-size: x-small;
+      font-size: x-small;
     }
-
+  
     .About {
-        flex-direction: column;
-        font-size: small;
+      flex-direction: column;
+      font-size: small;
     }
-
+  
     .About div {
-        width: 80%;
-        margin-top: 5%;
-        margin-bottom: 5%;
+      width: 80%;
+      margin-top: 5%;
+      margin-bottom: 5%;
     }
-
+  
     .Projects {
-        font-size: small;
-        display: flex;
-        flex-direction: column;
-        height: fit-content;
+      font-size: small;
+      display: flex;
+      flex-direction: column;
+      height: fit-content;
     }
-
+  
     .Projects h2 {
-        margin-top: 5%;
+      margin-top: 5%;
     }
-
+  
     .gallery {
-        padding: 2px;
-        ;
-        height: 100%;
-        flex-direction: row;
+      padding: 2px;
+      height: 100%;
+      flex-direction: row;
     }
-
+  
     .gallery-item {
-        font-size: small;
-        width: 50%;
+      font-size: small;
+      width: 50%;
     }
-
+  
     .Contact {
-        font-size: small;
+      font-size: small;
     }
-}
-
-@media only screen and (min-width: 531px) and (max-width:1024px) {
+  }
+  
+  @media only screen and (min-width: 531px) and (max-width: 1024px) {
     .Projects {
-        height: 70vw;
-        scroll-margin-top: 7em;
+      height: 70vw;
+      scroll-margin-top: 7em;
     }
-    
-}
-
-@media only screen and (min-width:1025px) and (max-width:1440px)  {
+  }
+  
+  @media only screen and (min-width: 1025px) and (max-width: 1440px) {
     .gallery-item {
-        width: auto;
+      width: auto;
     }
-    
-}
-
-@media only screen and (min-width:1441px) and (max-width:2560px) {
+  }
+  
+  /* @media only screen and (min-width:1441px) and (max-width:2560px) {
+      .gallery-item {
+          width: 20%;
+      }
+      .gallery {
+          justify-content: space-evenly;
+          height: 90%;
+      }
+  } */
+  
+  @media only screen and (min-width: 2561px) {
     .gallery-item {
-        width: 20%;
+      width: 20%;
     }
-    .gallery {
-        justify-content: space-evenly;
-        height: 90%;
-    }
-}
-
-@media only screen and (min-width:2561px) {
-    .gallery-item {
-        width: 20%;
-    }
-    
-}
-
+  }
+  
+  
