--- a/assets/css/devstyle.css
+++ b/assets/css/devstyle.css
@@ -196,16 +196,44 @@
   
   .card2 {
     width: 30%;
-    min-height: 90%;
+    height: 100%;
     display: flex;
-    padding: 2.5em;
+  
+    padding: 2em;
     flex-direction: column;
     font-size: 1.3em;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     background-color: #0a0708;
     border-radius: 20px;
     box-shadow: 0 0 5px 0.3px #b1b1b1;
+  }
+
+  .card2 h1{
+    height: 10%;
+
+  }
+
+  .skillscontainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 90%;
+    width: 100%;
+  }
+
+
+
+  .skillscontainer div {
+    display: flex;
+   
+    align-items: center;
+    width: 60%;
+    height: 2.3em;
+    text-align: center;
+    
+   
   }
   
   img {
@@ -213,30 +241,32 @@
     width: 50%;
     border-radius: 20px;
   }
+
+  .skillscontainer div img {
   
-  i {
-    font-size: 200%;
-    align-items: flex-start;
+    width: 30px;
+    filter: invert(90%);
+    filter: contrast(10%);
   }
+
+  i{
+    font-size: 200%;
+  }
+ 
   
   .Projects {
     grid-area: Projects;
     background-color: #0a0708;
-    /* height: 100vh; */
+    height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    scroll-margin-top: 1.5em;
+    scroll-margin-top: 2em;
     flex-direction: column;
-    padding: 2em;
+    padding: 1em;
+ 
   }
-  
-  /* h2 {
-    color: #b1b1b1;
-    justify-content: center;
-    height: 1em;
-    font-family: "Courier New", Courier, monospace;
-  } */
+
   
   .Projects h2 {
     display: flex;
@@ -246,15 +276,18 @@
     padding: 0.5em;
     color: #0a0708;
     box-shadow: 0 0 10px 1px #b1b1b1;
-  
+    height: 10%;
     text-align: center;
+    
   }
   
   .gallery {
     display: flex;
+    
     justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 1em;
+    align-items: center;
+   
+    height: 80%;
   
     width: 100%;
   }
@@ -262,14 +295,16 @@
   .gallery-item {
     display: flex;
     flex-direction: column;
-    width: 20%;
-    height: 35%;
-    padding: 1em;
-    margin: 3em;
+    width: 15%;
+    flex-wrap: wrap;
+    height: 70%;
+   
+    padding: 0.5em;
+    margin: 0.5em;
     background-color: #747474;
     border-radius: 5px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     box-shadow: 0 0 5px 2px #b1b1b1;
     font-size: 0.6em;
     text-align: center;
@@ -277,6 +312,20 @@
   
   .gallery-item:hover {
     box-shadow: 0 0 10px 3px #b1b1b1;
+  }
+
+  .gallery-item h2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #0a0708;
+    color: #747474;
+    height: fit-content;
+    padding: 0%;
+    width: 100%;
+    text-align: center;
+    height: 20%;
+   
   }
   
   .gallery img {
@@ -349,6 +398,8 @@
     flex-direction: column;
     align-content: space-between;
     font-size: larger;
+    filter: contrast(70%);
+
   }
   
   .forminputs {
@@ -457,17 +508,115 @@
       font-size: small;
     }
   }
+
+
+  @media only screen and (min-width: 321px) and (max-width: 375px) {
+    *{
+      font-size: medium
+    }
+
+    .Abouth2{
+      font-size: 1.5em;
+    }
+
+    .card2{
+      font-size: 0.5em;
+      padding: 2em;
+    }
+
+    .Projects h2{
+      padding: 1em;
+      height: auto;
+    }
+
+    .contactcontainer{
+      height: auto;
+      padding: 1em;
+    }
+  }
+  @media only screen and (min-width: 376px) and (max-width: 425px) {
+    *{
+      font-size: medium
+    }
+
+    .Abouth2{
+      font-size: 1.5em;
+    }
+
+    .card2{
+      font-size: 0.5em;
+      padding: 2em;
+    }
+
+    .Projects h2{
+      padding: 1em;
+      height: auto;
+    }
+
+    .contactcontainer{
+      height: auto;
+      padding: 1em;
+    }
+  }
+
+  @media only screen and (min-width: 426px) and (max-width: 768px) {
+      *{
+        font-size: medium
+      }
+
+      .Abouth2{
+        font-size: 1.5em;
+      }
   
-  @media only screen and (min-width: 531px) and (max-width: 1024px) {
-    .Projects {
-      height: 70vw;
-      scroll-margin-top: 7em;
+      .card2{
+        font-size: 0.5em;
+        padding: 2em;
+      }
+  
+      .Projects h2{
+        padding: 1em;
+        height: auto;
+      }
+  
+      .contactcontainer{
+        height: auto;
+        padding: 1em;
+      }
+  }
+  
+  @media only screen and (min-width: 769px) and (max-width: 1024px) {
+    *{
+      font-size: medium;
+    }
+
+    .Abouth2{
+      font-size: 1.5em;
+    }
+
+    .card2{
+      font-size: 0.5em;
+      padding: 2em;
+    }
+
+    .Projects h2{
+      padding: 1em;
+      height: auto;
+    }
+
+    .contactcontainer{
+      height: auto;
+      padding: 1em;
     }
   }
   
   @media only screen and (min-width: 1025px) and (max-width: 1440px) {
-    .gallery-item {
-      width: auto;
+    .card2{
+      font-size: medium;
+   
+    }
+
+    .gallery-item h2{
+      font-size: 1em;
     }
   }
   
